jena-shex/src/test/files/spec/negativeStructure/1focusRefANDSelfdot.shex
# Circular reference to <http://a.example/S1>
<http://a.example/S1>
      @<http://a.example/S2>
  AND @<http://a.example/S1>
  AND {  }
<http://a.example/S2> {  }
